--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ div{
 }
 #password{
     position: absolute;
-    background-color: red;
+    background-color: rgba(255, 0, 0, 0.501);
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
