--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-div{
+div.position-relative{
     height: 100vh;
     width: 100%;
 }
-#password{
+.box{
     position: absolute;
     background-color: rgba(255, 0, 0, 0.501);
     top: 50%;
